bug reopen fix : quetion card spacing and layout

--- a/examine-client/src/App.css
+++ b/examine-client/src/App.css
@@ -161,7 +161,11 @@
 }
 
 .conclusions-markup {
+  font-size: large;
   padding: 10px;
+}
+
+.question-footer-markup {
   font-size: large;
 }
 
